Fixed overflow of navbar buttons on mobile

--- a/app/Components/Navbar/navbar.css
+++ b/app/Components/Navbar/navbar.css
@@ -52,7 +52,7 @@
     background: none;
     border: none;
     color: white;
-    height: 100%;
+    min-height: 30px;
     width: 120px;
 
     font-size: 1.2rem;
@@ -60,7 +60,7 @@
     transition:
         background-color 0.2s ease,
         color 0.2s ease,
-        transform 0.1s ease;
+        transform 0s ease;
 }
 
 .navbar-buttons button:hover {
@@ -113,7 +113,7 @@
 
     .navbar-buttons {
         position: fixed;
-        top: 80px;
+        top: 60px;
         right: 0;
 
         flex-direction: column;
@@ -122,26 +122,19 @@
         width: 100%;
         background-color: #171717;
 
-        transform: translateY(-200%);
+        transform: translateY(-150%);
         transition: transform 0.5s ease;
         z-index: 997;
     }
 
     .navbar-buttons.open {
-        transform: translateY(-60);
+        transform: translateY(0);
         width: 100%;
         margin-right: 0;
     }
 
-    .navbar-buttons a {
-        width: 100%;
-        height: 30px;
-        justify-content: center;
-    }
-
     .navbar-buttons button {
         width: 100%;
-        height: 100%;
         font-size: 1.2rem;
     }
 
